2009-04-21  Mark Mitchell  <mark@codesourcery.com>

	* libc/include/_ansi.h: Move C++ defines to top of file.
	(_NOTHROW): New macro.
	(_EXFUN_NOTHROW): Likewise.
	* libc/include/stdlib.h (calloc): Declare with _EXFUN_NOTHROW.
	(free): Likewise.
	(malloc): Likewise.
	(realloc): Likewise.
	(_malloc_r): Likewise.
	(_callor_r): Likewise.
	(_free_r): Likewise.
	(_realloc_r): Likewise.

2009-04-20  Jeff johnston  <jjohnstn@redhat.com>

	* libc/include/math.h: Change _LDBL_EQ_DBL flag usage to
	be _HAVE_LDBL_MATH.
	* libc/include/stdlib.h: Change _LDBL_EQ_DBL flag usage to
	be _HAVE_LDBL_STDLIB.

2009-04-17  Jeff johnston  <jjohnstn@redhat.com>

	* libc/include/machine/ieeefp.h (_LDBL_EQ_DBL): Remove.
	* libc/stdlib/local.h (_LDBL_EQ_DBL): Add.
	* libc/stdlib/strtold.c: Include local.h.
	* libc/stdlib/wcstold.c: Likewise.
	* libm/common/atanl.c: Likewise.
	* libm/common/cosl.c: Likewise.
	* libm/common/sinl.c: Likewise.
	* libm/common/modfl.c: Likewise.
	* libm/common/frexpl.c: Likewise.
	* libm/common/tanhl.c: Likewise.
	* libm/common/tanl.c: Likewise.
	* libm/common/expm1l.c: Likewise.
	* libm/common/log1pl.c: Likewise.
	* libm/common/ceill.c: Likewise.
	* libm/common/fabsl.c: Likewise.
	* libm/common/floorl.c: Likewise.
	* libm/common/acosl.c: Likewise.
	* libm/common/asinl.c: Likewise.
	* libm/common/atan2l.c: Likewise.
	* libm/common/coshl.c: Likewise.
	* libm/common/expl.c: Likewise.
	* libm/common/fmodl.c: Likewise.
	* libm/common/hypotl.c: Likewise.
	* libm/common/ldexpl.c: Likewise.
	* libm/common/log10l.c: Likewise.
	* libm/common/logl.c: Likewise.
	* libm/common/powl.c: Likewise.
	* libm/common/sqrtl.c: Likewise.
	* libm/common/copysignl.c: Likewise.
	* libm/common/ilogbl.c: Likewise.
	* libm/common/nanl.c: Likewise.
	* libm/common/cbrtl.c: Likewise.
	* libm/common/asinhl.c: Likewise.
	* libm/common/nextafterl.c: Likewise.
	* libm/common/rintl.c: Likewise.
	* libm/common/scalbnl.c: Likewise.
	* libm/common/exp2l.c: Likewise.
	* libm/common/fdiml.c: Likewise.